--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
 html,
 body {
+    font-family: system-ui, sans-serif;
     background-color: white;
-    height: 100%;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    color: black;
+}
+
+@media (prefers-color-scheme: dark) {
+
+    html,
+    body {
+        background-color: black;
+        color: white;
+    }
 }
