--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     font-family: system-ui, sans-serif;
     background-color: white;
     color: black;
+    font-size: 1.5em;
 }
 
 @media (prefers-color-scheme: dark) {
