--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
     color: black;
     font-size: 1.5em;
     font-weight: 500;
+    text-align: center;
+    margin: 2em 0.5em;
 }
 
 #countdown {
