--- a/style.css
+++ b/style.css
@@ -5,8 +5,16 @@ body {
     color: black;
     font-size: 1.25em;
     font-weight: 500;
+
+    height: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
     text-align: center;
-    margin: 2em 0.1em;
 }
 
 #countdown {
